--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             var reset = $(".reset");
 
             hello.experiment({
-                name: "Zoran Felbar",
+                name: "Miser Pinky",
                 currentColor: "pink",
                 secondaryColor: "orange"
             });
